--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "@types/recharts": "^1.8.29",
     "bcryptjs": "^3.0.2",
     "iron-session": "^8.0.4",
     "next": "15.2.2",
@@ -17,6 +18,7 @@
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
