--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.0",
     "@prisma/client": "^6.5.0",
     "@types/recharts": "^1.8.29",
     "bcryptjs": "^3.0.2",
