--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@neondatabase/serverless": "^1.0.0",
     "@prisma/client": "^6.5.0",
     "@types/recharts": "^1.8.29",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "iron-session": "^8.0.4",
     "next": "15.2.2",
