--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
+    "swr": "^2.3.3",
     "tinacms": "^2.7.7",
     "zod": "^3.24.2"
   },
